--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -35,7 +36,9 @@
     "dotenv": "^17.2.3",
     "lucide-react": "^0.553.0",
     "next": "16.0.3",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
+    "pg": "^8.16.3",
     "prisma": "^6.19.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
